# adventofcode

./: .bazelrc  .gitignore  .sbtopts  BUILD  MODULE.bazel  README.md  WORKSPACE  build.sbt  day19.py  day22.py  docker-compose.yaml  maven_install.json  protobuf.patch
.ijwb/: .bazelproject
data/grafana/: grafana.db
src/main/python/aoc2022/: day21.py  day22.py
src/main/python/aoc2024/: day13.py  day21.py  day24.py
src/main/python/aoc2025/: day10_2.py
src/main/resources/aoc2022/: day21.input
src/main/resources/aoc2023/: BUILD  day24.py
src/main/resources/aoc2024/: BUILD
src/main/scala/aoc/: AdventDSL.scala  AdventOfCode.scala  BUILD  Data.scala  DisjointSet.scala  Maths.scala  NewDay.scala  Search.scala  Strings.scala  package.scala
src/main/scala/aoc2015/: BUILD.bazel  Day1.scala  Day10.scala  Day11.scala  Day12.scala  Day13.scala  Day14.scala  Day15.scala  Day16.scala  Day17.scala  Day18.scala  Day19.scala  Day2.scala  Day20.scala  Day21.scala  Day22.scala  Day23.scala  Day24.scala  Day25.scala  Day3.scala  Day4.scala  Day5.scala  Day6.scala  Day7.scala  Day8.scala  Day9.scala
src/main/scala/aoc2016/: BUILD.bazel  Day1.scala  Day10.scala  Day11.scala  Day12.scala  Day13.scala  Day14.scala  Day15.scala  Day16.scala  Day17.scala  Day18.scala  Day19.scala  Day2.scala  Day20.scala  Day21.scala  Day22.scala  Day23.scala  Day24.scala  Day25.scala  Day3.scala  Day4.scala  Day5.scala  Day6.scala  Day7.scala  Day8.scala  Day9.scala
src/main/scala/aoc2017/: BUILD.bazel  Day1.scala  Day10.scala  Day11.scala  Day12.scala  Day13.scala  Day14.scala  Day15.scala  Day16.scala  Day17.scala  Day18.scala  Day19.scala  Day2.scala  Day20.scala  Day21.scala  Day22.scala  Day23.scala  Day24.scala  Day25.scala  Day3.scala  Day4.scala  Day5.scala  Day6.scala  Day7.scala  Day8.scala  Day9.scala
src/main/scala/aoc2018/: BUILD.bazel  Day1.scala  Day10.scala  Day11.scala  Day12.scala  Day13.scala  Day14.scala  Day15.scala  Day16.scala  Day17.scala  Day2.scala  Day3.scala  Day4.scala  Day5.scala  Day6.scala  Day7.scala  Day8.scala  Day9.scala
src/main/scala/aoc2019/: BUILD.bazel  Day1.scala  Day2.scala  Day3.scala  Day4.scala  Day5.scala  Day6.scala  Day7.scala  Day8.scala  IntCode.scala
src/main/scala/aoc2020/: AdventOfCode.scala  BUILD.bazel  Day1.scala  Day10.scala  Day11.scala  Day12.scala  Day13.scala  Day14.scala  Day15.scala  Day16.scala  Day17.scala  Day18.scala  Day19.scala  Day2.scala  Day20.scala  Day21.scala  Day22.scala  Day23.scala  Day24.scala  Day25.scala  Day3.scala  Day4.scala  Day5.scala  Day6.scala  Day7.scala  Day8.scala  Day9.scala  README.md  package.scala
src/main/scala/aoc2021/: BUILD.bazel  Day1.scala  Day10.scala  Day11.scala  Day12.scala  Day13.scala  Day14.scala  Day15.scala  Day16.scala  Day17.scala  Day18.scala  Day19.scala  Day2.scala  Day20.scala  Day21.scala  Day22.scala  Day23.scala  Day24.scala  Day25.scala  Day3.scala  Day4.scala  Day5.scala  Day6.scala  Day7.scala  Day8.scala  Day9.scala  day24.py
src/main/scala/aoc2022/: BUILD  Day1.scala  Day10.scala  Day11.scala  Day12.scala  Day13.scala  Day14.scala  Day15.scala  Day16.scala  Day17.scala  Day18.scala  Day19.scala  Day2.scala  Day20.scala  Day21.scala  Day22.scala  Day23.scala  Day24.scala  Day25.scala  Day3.scala  Day4.scala  Day5.scala  Day6.scala  Day7.scala  Day8.scala  Day9.scala  day17.py
src/main/scala/aoc2023/: BUILD  Day1.scala  Day10.scala  Day11.scala  Day12.scala  Day13.scala  Day14.scala  Day15.scala  Day16.scala  Day17.scala  Day18.scala  Day19.scala  Day2.scala  Day20.scala  Day21.scala  Day22.scala  Day23.scala  Day24.scala  Day25.scala  Day3.scala  Day4.scala  Day5.scala  Day6.scala  Day7.scala  Day8.scala  Day9.scala
src/main/scala/aoc2024/: BUILD  Day1.scala  Day10.scala  Day11.scala  Day12.scala  Day13.scala  Day14.scala  Day15.scala  Day16.scala  Day17.scala  Day18.scala  Day19.scala  Day2.scala  Day20.scala  Day21.scala  Day22.scala  Day23.scala  Day24.scala  Day25.scala  Day3.scala  Day4.scala  Day5.scala  Day6.scala  Day7.scala  Day8.scala  Day9.scala
src/main/scala/aoc2025/: BUILD  Day1.scala  Day10.scala  Day11.scala  Day12.scala  Day2.scala  Day3.scala  Day4.scala  Day5.scala  Day6.scala  Day7.scala  Day8.scala  Day9.scala
src/test/scala/aoc/: AdventDSLSuite.scala  BUILD  Day13Test.scala
src/test/scala/aoc2015/: Day10Test.scala  Day11Test.scala  Day13Test.scala  Day14Test.scala  Day15Test.scala  Day17Test.scala  Day18Test.scala  Day19Test.scala  Day5Test.scala  Day8Test.scala
src/test/scala/aoc2020/: Day10Test.scala  Day11Test.scala  Day13Test.scala  Day14Test.scala  Day15Test.scala  Day17Test.scala  Day18Test.scala  Day19Test.scala  Day1Test.scala  Day2Test.scala  Day4Test.scala  Day5Test.scala  Day7Test.scala
src/test/scala/aoc2021/: Day18Test.scala  Day3Test.scala
tools/build_rules/: aoc.bzl  aoc_inputs.bzl  prelude_bazel
