bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_java", version = "9.0.3")
bazel_dep(name = "rules_scala", version = "7.1.5")

scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(scala_version = "2.13.17")

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps.scala()
scala_deps.scalatest()

scala_protoc = use_extension(
    "@rules_scala//scala/extensions:protoc.bzl",
    "scala_protoc",
    dev_dependency = True,
)
use_repo(scala_protoc, "rules_scala_protoc_toolchains")

register_toolchains(
    "@rules_scala_protoc_toolchains//...:all",
    dev_dependency = True,
)

register_toolchains("@rules_scala//testing:scalatest_toolchain")

bazel_dep(
    name = "protobuf",
    version = "30.2",
    repo_name = "com_google_protobuf",
)
single_version_override(
    module_name = "protobuf",
    patch_strip = 1,
    patches = ["//:protobuf.patch"],
    version = "30.2",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "ch.qos.logback:logback-classic:1.4.13",
        "com.github.ben-manes.caffeine:caffeine:3.1.8",
        "com.github.blemale:scaffeine_2.13:5.3.0",
        "com.google.inject:guice:5.1.0",
        "com.twitter:finagle-core_2.13:23.11.0",
        "com.twitter:finagle-zipkin-core_2.13:23.11.0",
        "com.twitter:inject-app_2.13:23.11.0",
        "com.twitter:inject-core_2.13:23.11.0",
        "com.twitter:util-app_2.13:23.11.0",
        "com.twitter:util-app-lifecycle_2.13:23.11.0",
        "com.twitter:util-core_2.13:23.11.0",
        "com.twitter:util-slf4j-api_2.13:23.11.0",
        "com.twitter:util-slf4j-jul-bridge_2.13:23.11.0",
        "io.opentelemetry:opentelemetry-api:1.24.0",
        "io.opentelemetry:opentelemetry-context:1.24.0",
        "io.opentelemetry:opentelemetry-sdk:1.24.0",
        "io.opentelemetry:opentelemetry-sdk-common:1.24.0",
        "io.opentelemetry:opentelemetry-sdk-trace:1.24.0",
        "io.opentelemetry:opentelemetry-exporter-prometheus:0.13.1",
        "io.opentelemetry:opentelemetry-exporter-zipkin:1.24.0",
        "io.opentelemetry:opentelemetry-semconv:1.24.0-alpha",
        "io.zipkin.finagle2:zipkin-finagle_2.13:22.4.0",
        "io.zipkin.finagle2:zipkin-finagle-http_2.13:22.4.0",
        "org.scala-lang.modules:scala-parallel-collections_2.13:1.1.0",
        "org.scalatest:scalatest_2.13:3.2.15",
        "org.slf4j:slf4j-api:2.0.9",
        "org.typelevel:spire_2.13:0.18.0",
        "tools.aqua:z3-turnkey:4.14.1"
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
)

use_repo(maven, "maven", "unpinned_maven")

aoc_inputs = use_extension("//tools/build_rules:aoc_inputs.bzl", "aoc_inputs_ext")
aoc_inputs.year(year = 2015, days = list(range(1, 26)))
aoc_inputs.year(year = 2016, days = list(range(1, 26)))
aoc_inputs.year(year = 2017, days = list(range(1, 26)))
aoc_inputs.year(year = 2018, days = list(range(1, 18)))
aoc_inputs.year(year = 2019, days = list(range(1, 9)))
aoc_inputs.year(year = 2020, days = list(range(1, 26)))
aoc_inputs.year(year = 2021, days = list(range(1, 26)))
aoc_inputs.year(year = 2022, days = list(range(1, 26)))
aoc_inputs.year(year = 2023, days = list(range(1, 26)))
aoc_inputs.year(year = 2024, days = list(range(1, 26)))
aoc_inputs.year(year = 2025, days = list(range(1, 13)))
use_repo(
    aoc_inputs,
    "aoc_inputs_2015",
    "aoc_inputs_2016",
    "aoc_inputs_2017",
    "aoc_inputs_2018",
    "aoc_inputs_2019",
    "aoc_inputs_2020",
    "aoc_inputs_2021",
    "aoc_inputs_2022",
    "aoc_inputs_2023",
    "aoc_inputs_2024",
    "aoc_inputs_2025",
)
